<resources>
    <string name="app_name">Battleship</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="create">Создать игру</string>
    <string name="join">Присоединиться к игре</string>
    <string name="stats">Статистика</string>
    <string name="guest">Гость</string>
    <string name="title">МОРСКОЙ БОЙ</string>
    <string name="history">Мои игры</string>
    <string name="clear">Очистить</string>
    <string name="remove">Удалить</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
